--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@ footer a:hover {
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="bcc-h.html">Historia</a>
+                        <a class="nav-link" href="bcc-up.html">Updates</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#updates">Updates</a>
+                        <a class="nav-link" href="bcc-avisos.html">Avisos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#sobrenos">Sobre Nós</a>
@@ -294,7 +294,7 @@ footer a:hover {
                         <a class="nav-link" href="#equipe">Equipe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bcc-suporte.html">Contato</a>
+                        <a class="nav-link" href="#contato">Contato</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#redes-sociais">Redes Sociais</a>
