--- a/index.html
+++ b/index.html
@@ -288,9 +288,6 @@ footer a:hover {
                         <a class="nav-link" href="#sobrenos">Sobre Nós</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#events">Calendário</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#equipe">Equipe</a>
                     </li>
                     <li class="nav-item">
@@ -298,6 +295,9 @@ footer a:hover {
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#redes-sociais">Redes Sociais</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="bcc-d.html">Denuncias</a>
                     </li>
                 </ul>
             </div>
