--- a/index.html
+++ b/index.html
@@ -362,9 +362,11 @@ footer a:hover {
                 <div class="col-md-6">
                     <div class="feature">
                         <img src="paty/imgs/icon-fundo2.jpg" alt="Recursos">
-                        <h2>Sobre Nós</h2>
-                        <p>Estamos na 5ª Season de BRASIL CENTRAL CITY! Continuamos comprometidos em oferecer uma experiência de roleplay ainda mais envolvente e dinâmica. Prepare-se para novidades emocionantes e desafios inéditos enquanto exploramos juntos novos horizontes!</p>
-                    </div>
+                        <div class="feature">
+                            <h2>Sobre Nós</h2>
+                            <p>Bem-vindo à o BRASIL CENTRAL CITY, onde a história se encontra com a inovação no mundo do roleplay. Desde nossa fundação, temos orgulho em oferecer uma experiência única e imersiva para nossos jogadores. Com uma comunidade vibrante e dedicada, exploramos constantemente novas maneiras de elevar o padrão do roleplay. Com a chegada da 5ª temporada, estamos prontos para introduzir mudanças emocionantes e desafios inéditos. Junte-se a nós nesta jornada emocionante e descubra o que torna a BRASIL CENTRAL CITY um lugar tão especial.</p>
+                        </div>                        
+                    </div>                              
                 </div>
             </div>
         </div>
@@ -376,8 +378,18 @@ footer a:hover {
             <div class="row">
                 <div class="col">
                     <div class="feature">
-                        <h2>Nossa Equipe</h2>
-                        <p>Na BRASIL CENTRAL CITY, nossa equipe é composta por indivíduos apaixonados e dedicados, cada um contribuindo com talento único para criar uma comunidade de roleplay excepcional. Desde desenvolvedores experientes até moderadores atenciosos, todos trabalham juntos para garantir que sua experiência em nosso servidor seja memorável e enriquecedora. Junte-se a nós e conheça as pessoas por trás da magia do BRASIL CENTRAL CITY!</p>
+                        <h2>Nossa Equipe do BCC</h2>
+                        <p>No BRASIL CENTRAL CITY, nossa equipe é composta por indivíduos apaixonados e dedicados, cada um contribuindo com talento único para criar uma comunidade de roleplay excepcional. Desde desenvolvedores experientes até moderadores atenciosos, todos trabalham juntos para garantir que sua experiência em nosso servidor seja memorável e enriquecedora. Junte-se a nós e conheça as pessoas por trás da magia do BRASIL CENTRAL CITY!</p>
+                        <ul>
+                            <li>Gago4k - CEO e Desenvolvedor</li>
+                            <li>Snow - CEO e Desenvolvedor</li>
+                            <li>Soneca - CEO e Desenvolvedor</li>
+                            <li>Connor - Staff</li>
+                            <li>Victor - Staff</li>
+                            <li>Tikao - Staff</li>
+                            <li>Mecjunyor - Staff</li>
+                            <!-- Adicione mais membros da equipe conforme necessário -->
+                        </ul>
                     </div>
                 </div>
             </div>
